# oracle-assignment-age-classifier

./: .gitignore  README.md  age_classifier.ipynb  app.py  pyproject.toml  requirements.txt
