[tool.poetry]
name = "oracle-assignment-age-classifier"
version = "0.1.0"
description = ""
authors = ["qivaijar <qivaijar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.3.5"
torch = "^2.6.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
torchvision = "^0.21.0"
gradio = "^5.15.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^25.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
